--- a/syntext.html
+++ b/syntext.html
@@ -7,14 +7,20 @@
 </head>
 <body>
 <script>
+    // let x; ---- let is used to declear the variable
+    // var x; ------ var is used to declear the variable but this is an old way
+    // const is used to declear the constant variable
     var x;
     x = 10;
     var y = 20;
+    var z = 50;
+    let w = y + z;
 // Documen.Write to show on similar page
 
     document.write("You have a due of ", x, "<br>" );
-    document.write("Your Given Number is ", y);
-    alert("You have a due of " + x);
+    document.write("Your Given Number is "+ y + "<br>") ;
+    document.write("The final ammount is "+w);
+    alert("You have a due of " , x);
     // alert("This is another line");
 </script>
 </body>
