js function include

--- a/table_with-loop.html
+++ b/table_with-loop.html
@@ -14,7 +14,7 @@
     <h3>Flower List With Table</h3>
     <script>
         const flowers = ["Jesmin", "Waterlilly", "Sunflower", "Tulip", "Rose", "Daffodil"];
-        // const Price = [20, 50, 56, 40, 87, 78];
+        // const Price = [2c0, 50, 56, 40, 87, 78];
         let sn = 1;
         let output = "<table>"
             output += "<tr><th>SN</th><th>Flowers Name</th></tr>"
