--- a/evidence/form_validation.html
+++ b/evidence/form_validation.html
@@ -4,48 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styled Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            padding: 20px;
-        }
-
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            max-width: 400px;
-            margin: auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-        h3 {
-    text-align: center;
-}
-    </style>
 </head>
 <body>
     <h3>Form Validation</h3>
@@ -73,12 +31,15 @@
             }
            else if(gmail==""){
                 alert("Email Can't be blank")
+                return false;
             }
            else if(number==""){
                 alert("Number Can't be blank")
+                return false;
             }
            else if(address==""){
                 alert("Address Can't be blank")
+                return false;
             }
             return true;
         }
