--- a/window_object.html
+++ b/window_object.html
@@ -10,7 +10,17 @@
     <input type="text" name="name" placeholder="Name"><br>
     <input type="tel" name="phone" placeholder="Phone"><br>
     <input type="radio" name="gender" value="Male">Male
-    <input type="radio" name="gender" value="Female">Female
+    <input type="radio" name="gender" value="Female">Female <br>
+    <textarea name="textarea" id=""></textarea><br>
+    Courses: <br>
+    <input type="checkbox" name="NT">NT 
+    <input type="checkbox" name="IAD">IAD
+    <input type="checkbox" name="DDD">DDD  <br>
+    Location:
+    <select name="location" id="">
+      <option value="dhanmondi">Dhanmondi</option>
+      <option value="banani">Banani</option>
+    </select> <br>
     <input type="submit" name="submit" value="submit"><br>
     
   </form>
@@ -20,6 +30,12 @@
       let name = form.name.value;
       let phone = form.phone.value;
       let gender = form.gender.value;
+      let textarea = form.textarea.value;
+      let courses = [];
+    if (form.NT.checked) courses.push("NT");
+    if (form.IAD.checked) courses.push("IAD");
+if (form.DDD.checked) courses.push("DDD");
+      let location = form.location.value;
 
       let x = window.open("", "abc", "width=400,height=300");
 
@@ -27,7 +43,9 @@
       output += "Name: " + name + "<br>";
       output += "Phone: " + phone + "<br>";
       output += "Gender: " + gender + "<br>";
-
+      output += "Remarks: " + textarea + "<br>";
+      output += "Checked: " + courses.join(", ") + "<br>";
+      output += "Location:" +location + "<br>"
       x.document.write(output);
     }
   </script>
